@@ -1,3 +1,9 @@
+2005-10-11  noel  <vnoel@cox.net>
+
+	* logview.c (logview_monospace_font_changed): New.
+	(CreateMainWin): Listen to changes to the monospace font gconf key
+	and update the window accordingly.
+
 2005-10-06  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* logview.c (main):  Add application name (used in window title).
